<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/settings_show_images_key"
        android:title="@string/settings_show_images_title" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_show_body_default"
        android:entries="@array/settings_show_body_labels"
        android:entryValues="@array/settings_show_body_values"
        android:key="@string/settings_show_body_key"
        android:title="@string/settings_show_body_label" />

    <ListPreference
        android:defaultValue="@string/settings_page_size_default"
        android:entries="@array/settings_page_size_labels_values"
        android:entryValues="@array/settings_page_size_labels_values"
        android:key="@string/settings_page_size_key"
        android:title="@string/settings_page_size_label" />

</PreferenceScreen>